<resources>
    <string name="app_name">UserDisplayApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="create_account">Create a new Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_account">Already Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="donot_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
</resources>