<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp">


    <View
        android:id="@+id/viewSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="20:7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="@dimen/_22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSpace"
         />

    <TextView
        android:id="@+id/txtRegisterSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="@dimen/_17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle" />

    <LinearLayout
        android:id="@+id/llBodyForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterSubTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/background_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_14dp"
                android:hint="@string/email"
                android:singleLine="true"
                android:background="@drawable/input_box"
                android:ellipsize="end"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_20sp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/background_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="@dimen/_14dp"
                android:background="@drawable/input_box"
                android:singleLine="true"
                android:ellipsize="end"
                android:lines="1"
                android:inputType="textPassword"
                android:textSize="@dimen/_20sp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:background="@drawable/button"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:letterSpacing="0.2"
            android:textSize="@dimen/_17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_account"
                android:textSize="@dimen/_17sp" />

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginStart="@dimen/_5dp"
                android:textSize="@dimen/_17sp"
                android:textColor="@color/purple_700"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>